--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,67 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/* @import "~bootstrap/dist/css/bootstrap.min.css"; */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: green;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
+
+  /* width: 100vh; */
+}
+
+.container {
+  background-color: white;
+  width: 30%;
+  height: 80%;
+  border-radius: 15px;
+}
+
+.container-card {
+  display: flex;
+  justify-content: left;
+  height: 20%;
+}
+
+.symbol {
+  font-size: 100px;
+  margin-left: 15px;
+}
+
+.number {
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+}
+
+.container-card2 {
+  /* background-color: yellow; */
+  display: flex;
+  justify-content: right;
+  height: 20%;
+}
+
+.symbol2 {
+  font-size: 100px;
+  margin-right: 15px;
+}
+
+.button {
+  background-color: blueviolet;
+}
+
+.red {
+  color: red;
+}
+
+.reverse {
+  transform: scaleY(-1);
+}
